--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "zebra-logistics",
   "version": "1.0.0",
   "description": "MERN shopping cart app",
-  "engines" : { 
-    "npm" : "^8.15.0",
-    "node" : "^16.17.1"
+  "engines": {
+    "npm": "^8.15.0",
+    "node": "^16.17.1"
   },
   "main": "server.js",
   "type": "module",
@@ -15,7 +15,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --legacy-peer-deps --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/oragon-hub/MERN_E-commerce-App#readme",
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.8.1",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
@@ -36,7 +37,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "react-paypal-button-v2": "^2.6.3"
   },
   "devDependencies": {
     "concurrently": "^7.3.0",
